# BitToll

./: .gitignore  .gitmodules  HACKING  LICENSE  Makefile  Protocol  README.txt  Vagrantfile  bittoll.cabal  servers  test.sh
apiserver/: APIServer.hs  BTServer.hs  Main.hs  Makefile
apiserver/BT/: EndPoints.hs  Global.hs  Routing.hs
bcserver/: BCServer.hs  test.hs
configs/: apiserver.conf  bcserver.conf  bitcoin.conf  bitcoind.conf  bitcoind1.conf  bittoll.conf  firehol  firehol.conf  nginx.conf  p2pool.conf  p2pool.sh  poolserver.conf  redis.conf  statsd.conf
configs/carbon/: storage-schemas.conf
configs/carbon/init/: carbon.conf
configs/graphite/: local_settings.py
configs/nginx/: bittoll.conf
configs/statsd/: Config.js
configs/test/: bittoll.conf  p2pool.conf
configs/test/nginx/: bittoll.conf
configs/testnet-box/: README.txt
configs/testnet-box/1/: bitcoin.conf
configs/testnet-box/1/testnet3/blocks/index/: 000005.sst  000143.sst  000144.sst  000145.sst  000146.sst  000147.sst  000149.sst  LOG  LOG.old  MANIFEST-000148  MANIFEST-000151  MANIFEST-000153
configs/testnet-box/1/testnet3/chainstate/: 000008.sst  000009.sst  000012.sst  000013.sst  000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  000020.sst  000021.sst  000022.sst  000023.sst  000024.sst  000028.sst  LOG  LOG.old  MANIFEST-000010  MANIFEST-000014  MANIFEST-000021  MANIFEST-000025
configs/testnet-box/2/: bitcoin.conf
configs/uwsgi/init/: uwsgi.conf
configs/web_root/: controller.js  credit.html
dev/: arch_setup.sh  ubuntu_setup.sh
docs/: app.yaml
docs/css/: api.css
docs/html/: api.html  contrib.html  index.html
extension/: DESIGN  architecture_description.txt  bittoll.js  contentscript.js  manifest.json  option.html  option.js
extension/html/: option.html  popup.html
extension/html/partials/: login.html  payment.html
extension/js/: app.js  background.js  contentscript.js  controller.js  popup.js
extension/test_pages/: mk1.html  mk2.html  mk3.html
haskell/: APIServer.hs  BCServer.hs  MineUserTest.hs  NewBlock.hs  PoolServer.hs  PoolWrapper.hs  ReadConfig.hs
haskell/BT/: Config.hs  CustomRedis.hs  EndPoints.hs  Global.hs  JSON.hs  JWT.hs  Log.hs  Mining.hs  Payment.hs  Polling.hs  Redis.hs  Routing.hs  Types.hs  User.hs  Util.hs  ZMQ.hs
pam/: Notes
poolserver/: PoolServer.hs  test.hs
production/: bootstrap.sh  local_bootstrap.sh  puppet_run.sh  run_puppet.sh  setup_puppet.sh  update.sh
puppet/: base.pp  bitcoind.pp  bittoll.pp  bootstrap.sh  build.pp  build_dep.pp  chris_ppa.pp  config.pp  dev.pp  firehol.pp  git.pp  graphite.pp  links.pp  nginx.pp  p2pool.pp  production.pp  redis.pp  statsd.pp  test_vm.pp  uwsgi.pp
puppet_modules/: apt  ntp  vcsrepo
testsuite/: client.py  conftest.py  front_test.py  node_test.py  testlib.py
uml/: Makefile  deploy.uml
vagrant/: Vagrantfile  manifests
website/: _footer.kit  _header.kit  faq.html  faq.kit  index.html  index.kit  register.html  register.kit  variables.kit
website/assets/anoncard.sketch/: Data  fonts
website/assets/content.sketch/: Data  fonts
website/fonts/: bittoll.eot
website/javascripts/: processing2.coffee  processingCode.js  unslider-ck.js
website/sass/: _settings.scss  app.scss  fonts.scss  home.scss  index.html  mixins.scss  notes.txt  register.scss  styles.scss  variables.scss
website/stylesheets/: app.css  home.css  register.css
