name:           bittoll
version:        0.1
synopsis:       A bitcoin toll server
homepage:       http://github.com/c00w/bittoll/
category:       Testing
author:         Colin Rice
license:        BSD3
license-file:   LICENSE
cabal-version:  >= 1.14
build-type:     Simple

executable APIServer
    build-depends:  base,
                    bytestring,
                    zeromq3-haskell,
                    resource-pool,
                    hedis,
                    wai,
                    random,
                    json,
                    containers,
                    transformers,
                    http-types,
                    warp,
                    conduit,
                    cryptohash,
                    hex,
                    network-bitcoin,
                    aeson,
                    base64-bytestring,
                    text
    main-is:        APIServer.hs
    hs-source-dirs: haskell
    ghc-options:     -Wall
    default-language: Haskell2010

executable BCServer 
    build-depends:  network-bitcoin,
                    text,
                    base,
                    zeromq3-haskell,
                    containers,
                    bytestring
    main-is:        BCServer.hs
    hs-source-dirs: haskell
    ghc-options:     -Wall
    default-language: Haskell2010

executable PoolServer
    build-depends:  network-bitcoin,
                    text,
                    base,
                    zeromq3-haskell,
                    containers,
                    aeson,
                    bytestring
    main-is:        PoolServer.hs
    hs-source-dirs: haskell
    ghc-options:     -Wall
    default-language: Haskell2010

executable PoolWrapper
    build-depends:  network-bitcoin,
                    base,
                    random,
                    json,
                    zeromq3-haskell,
                    bytestring,
                    aeson,
                    hedis,
                    transformers,
                    resource-pool,
                    wai,
                    text,
                    conduit
    main-is:        PoolWrapper.hs
    hs-source-dirs: haskell
    ghc-options:     -Wall
    default-language: Haskell2010

