name:           bittoll
version:        0.1
synopsis:       A bitcoin toll server
homepage:       http://github.com/c00w/bittoll/
category:       Testing
author:         Colin Rice
license:        BSD3
license-file:   LICENSE
cabal-version:  >= 1.14
build-type:     Simple

executable APIServer
    build-depends:  aeson,
                    base,
                    base64-bytestring,
                    bytestring,
                    conduit,
                    configurator,
                    containers,
                    cryptohash,
                    hedis,
                    hex,
                    http-types,
                    json,
                    network-bitcoin,
                    resource-pool,
                    random,
                    transformers,
                    text,
                    wai,
                    warp,
                    zeromq3-haskell
    main-is:        APIServer.hs
    hs-source-dirs: haskell
    ghc-options:     -Wall
    default-language: Haskell2010

executable BCServer 
    build-depends:  base,
                    bytestring,
                    containers,
                    network-bitcoin,
                    text,
                    zeromq3-haskell
    main-is:        BCServer.hs
    hs-source-dirs: haskell
    ghc-options:     -Wall
    default-language: Haskell2010

executable PoolServer
    build-depends:  aeson,
                    base,
                    bytestring,
                    containers,
                    network-bitcoin,
                    text,
                    zeromq3-haskell
    main-is:        PoolServer.hs
    hs-source-dirs: haskell
    ghc-options:     -Wall
    default-language: Haskell2010

executable PoolWrapper
    build-depends:  aeson,
                    base,
                    bytestring,
                    conduit,
                    hedis,
                    json,
                    network-bitcoin,
                    random,
                    resource-pool,
                    text,
                    transformers,
                    wai,
                    zeromq3-haskell
    main-is:        PoolWrapper.hs
    hs-source-dirs: haskell
    ghc-options:     -Wall
    default-language: Haskell2010

executable NewBlock
    build-depends:  aeson,
                    base,
                    bytestring,
                    conduit,
                    hedis,
                    json,
                    network-bitcoin,
                    random,
                    resource-pool,
                    text,
                    transformers,
                    wai,
                    zeromq3-haskell
    main-is:        NewBlock.hs
    hs-source-dirs: haskell
    ghc-options:     -Wall
    default-language: Haskell2010

executable MineUserTest
    build-depends:  aeson,
                    base,
                    bytestring,
                    conduit,
                    hedis,
                    json,
                    network-bitcoin,
                    random,
                    resource-pool,
                    text,
                    transformers,
                    wai,
                    zeromq3-haskell
    main-is:        MineUserTest.hs
    hs-source-dirs: haskell
    ghc-options:     -Wall
    default-language: Haskell2010

