name:           bittoll
version:        0.1
synopsis:       A bitcoin toll server
homepage:       http://github.com/c00w/bittoll/
category:       Testing
author:         Colin Rice
license:        BSD3
license-file:   LICENSE
cabal-version:  >= 1.14
build-type:     Simple

executable APIServer
    build-depends:  aeson,
                    base,
                    base64-bytestring,
                    bytestring,
                    conduit,
                    configurator,
                    containers,
                    control-monad-exception,
                    cryptohash,
                    hedis,
                    hex,
                    http-types,
                    monadloc,
                    network-bitcoin,
                    network-conduit,
                    network-metrics,
                    resource-pool,
                    random,
                    transformers,
                    text,
                    wai,
                    warp,
                    zeromq3-haskell
    main-is:        APIServer.hs
    hs-source-dirs: haskell
    ghc-options:     -Wall -O2 -fllvm
    default-language: Haskell2010

executable BCServer
    build-depends:  aeson,
                    base,
                    base64-bytestring,
                    bytestring,
                    conduit,
                    configurator,
                    containers,
                    cryptohash,
                    hedis,
                    hex,
                    network-bitcoin,
                    network-metrics,
                    resource-pool,
                    transformers,
                    text,
                    zeromq3-haskell
    main-is:        BCServer.hs
    hs-source-dirs: haskell
    ghc-options:     -Wall -O2 -fllvm
    default-language: Haskell2010

executable PoolServer
    build-depends:  aeson,
                    base,
                    base64-bytestring,
                    bytestring,
                    configurator,
                    containers,
                    control-monad-exception,
                    monadloc,
                    network-bitcoin,
                    network-metrics,
                    transformers,
                    text,
                    zeromq3-haskell
    main-is:        PoolServer.hs
    hs-source-dirs: haskell
    ghc-options:     -Wall -O2 -fllvm
    default-language: Haskell2010

executable PoolWrapper
    build-depends:  aeson,
                    base,
                    bytestring,
                    conduit,
                    configurator,
                    control-monad-exception,
                    hedis,
                    monadloc,
                    network-bitcoin,
                    network-metrics,
                    random,
                    resource-pool,
                    text,
                    transformers,
                    wai,
                    zeromq3-haskell
    main-is:        PoolWrapper.hs
    hs-source-dirs: haskell
    ghc-options:     -Wall -O2 -fllvm
    default-language: Haskell2010

executable NewBlock
    build-depends:  aeson,
                    base,
                    bytestring,
                    conduit,
                    configurator,
                    control-monad-exception,
                    hedis,
                    monadloc,
                    network-bitcoin,
                    network-metrics,
                    random,
                    resource-pool,
                    text,
                    transformers,
                    wai,
                    zeromq3-haskell
    main-is:        NewBlock.hs
    hs-source-dirs: haskell
    ghc-options:     -Wall -O2 -fllvm
    default-language: Haskell2010

executable MineUserTest
    build-depends:  aeson,
                    base,
                    bytestring,
                    conduit,
                    configurator,
                    control-monad-exception,
                    hedis,
                    monadloc,
                    network-bitcoin,
                    network-metrics,
                    random,
                    resource-pool,
                    text,
                    transformers,
                    wai,
                    zeromq3-haskell
    main-is:        MineUserTest.hs
    hs-source-dirs: haskell
    ghc-options:     -Wall -O2 -fllvm
    default-language: Haskell2010

executable ReadConfig
    build-depends:  base,
                    configurator,
                    text
    main-is:        ReadConfig.hs
    hs-source-dirs: haskell
    ghc-options:     -Wall -O2 -fllvm
    default-language: Haskell2010

